@@ -1206,6 +1206,9 @@ Example:
                     <child>
                       <widget class="Gtk.Button" id="removeButton">
                         <property name="MemberName" />
+                        <property name="WidthRequest">33</property>
+                        <property name="HeightRequest">33</property>
+                        <property name="Tooltip">Remove selected package from the project.</property>
                         <property name="CanFocus">True</property>
                         <property name="Type">TextAndIcon</property>
                         <property name="Icon">stock:gtk-remove Menu</property>
@@ -1215,7 +1218,7 @@ Example:
                       </widget>
                       <packing>
                         <property name="Position">0</property>
-                        <property name="AutoSize">True</property>
+                        <property name="AutoSize">False</property>
                         <property name="Expand">False</property>
                         <property name="Fill">False</property>
                       </packing>
